--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl module App::WIoZ
 
+0.003 Mon, 05 Aug 2013 09:53:49 +0200
+     - fix angle constraint on Moose 2.1004 by switching from Num to Str
 
 0.002 Sun, 04 Aug 2013 17:58:05 +0200
      - try to fix default value for angle to 0.0 after cpantest bug reports
